@@ -1,3 +1,12 @@
+2010-04-16  Ivan Maidanski <ivmai@mail.ru> (mostly really NIIBE Yutaka)
+
+	* pthread_support.c (GC_mark_thread_local_free_lists,
+	GC_check_tls): Mark (and check) only for live threads (in case of
+	GC_destroy_thread_local() is called already but GC_delete_thread()
+	is not yet).
+	* win32_threads.c (GC_mark_thread_local_free_lists, GC_check_tls):
+	Ditto (matters only if GC_PTHREADS defined).
+
 2010-04-09  Ivan Maidanski <ivmai@mail.ru>
 
 	* NT_MAKEFILE: Remove the comment about DLL and Win32S.
